dnl 
dnl  $Id$
dnl  autoconf file: apg
dnl
dnl  Copyright (c) 1999 Bonelli Nicola <bonelli@antifork.org>
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software
dnl  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
dnl
dnl  Process this file with autoconf to produce a configure script.

AC_INIT(apg.c)
AC_CONFIG_HEADER(config.h)

AC_SUBST(APC_GNU_ADDON_SRC)
AC_SUBST(V_LEX)
AC_SUBST(V_YACC)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CHECK_PROGS(SHTOOL, shtool, ./shtool)

AC_LBL_LEX_AND_YACC( V_LEX, V_YACC)

dnl Use these compiler flags if we have gcc.

if test $ac_cv_prog_gcc = yes; then
    CCOPTS='-O3 -funroll-loops -fomit-frame-pointer -pipe'
    CFLAGS="$CCOPTS"
fi

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h fcntl.h sys/time.h )

dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.

AC_CHECK_LIB(fl, yywrap, have_libfl=yes , have_libfl=no )

if test $have_libfl = no; then
	AC_WARN(apg is not able to find libfl library)
	AC_WARN(Install flex 2.5.4 or later)
	rm *.cache *.log
	exit
fi

AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strerror)

dnl Checks for getopt_long posix

AC_CHECK_FUNC(getopt_long, ,
  [ APC_GNU_ADDON_SRC="$APC_GNU_ADDON_SRC getopt.c getopt1.c" ])

AC_OUTPUT(Makefile)
